--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.14",
+    "firebase": "^10.6.0",
     "next": "14.0.2",
+    "notiflix": "^3.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
