--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.14",
+    "@mui/material": "^5.14.17",
     "firebase": "^10.6.0",
     "next": "14.0.2",
     "notiflix": "^3.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
+    "react-secure-storage": "^1.3.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
