--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
-    "react-secure-storage": "^1.3.0",
-    "zustand": "^4.4.6"
+    "react-secure-storage": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
