--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.14",
     "@mui/material": "^5.14.17",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "lodash": "^4.17.21",
     "next": "14.0.2",
     "notiflix": "^3.2.6",
     "react": "^18",
