--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "geist": "^1.1.0",
+    "gsap": "^3.12.2",
     "lodash": "^4.17.21",
     "next": "^14.0.2",
     "notiflix": "^3.2.6",
