--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,8 +23,8 @@
     "lodash": "^4.17.21",
     "next": "^14.0.2",
     "notiflix": "^3.2.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-secure-storage": "^1.3.0"
   },
