--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.17",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "geist": "^1.1.0",
     "next": "^14.0.2",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
