--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.0.2",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
+    "react-body-highlighter": "^2.0.5",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-secure-storage": "^1.3.0"
