added pump pictures

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/joy": "^5.0.0-beta.14",
     "@mui/material": "^5.14.17",
     "axios": "^1.6.2",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^10.6.0",
     "geist": "^1.1.0",
+    "image-compressor": "^2.0.3",
     "next": "^14.0.2",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
