--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-body-highlighter": "^2.0.5",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
-    "react-secure-storage": "^1.3.0"
+    "react-secure-storage": "^1.3.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
