--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.14",
     "@mui/material": "^5.14.17",
+    "@vercel/speed-insights": "^1.0.0",
     "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
     "firebase": "^10.6.0",
