--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.14",
     "@mui/material": "^5.14.17",
     "@vercel/speed-insights": "^1.0.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
     "firebase": "^10.6.0",
